	<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="top|center"
		android:layout_margin="10dp"
		android:columnCount="2"
		android:orientation="horizontal"
		android:rowCount="9"
		tools:context="ru.t022.c2h5oh.MainActivity">

		<TextView
			android:id="@+id/textView0"
			android:layout_row="1"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="center"
			android:text="@string/title"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<TextView
			android:id="@+id/textView20C"
			android:layout_row="0"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="center"
			android:keepScreenOn="true"
			android:text="@string/conditions"
			android:textColor="#33b5e5"
			android:textSize="30sp"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/textView2"
			android:layout_height="match_parent"
			android:layout_row="2"
			android:layout_column="0"
			android:layout_gravity="left|center_vertical"
			android:text="@string/textV0"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<EditText
			android:id="@+id/editTextV0"
			android:layout_width="125dp"
			android:layout_row="2"
			android:layout_column="1"
			android:ems="10"
			android:hint="@string/hintV0"
			android:inputType="number"
			android:maxLength="6"
			android:minHeight="48dp"
			tools:ignore="DuplicateSpeakableTextCheck"
			android:importantForAutofill="no">

		</EditText>

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_row="3"
			android:layout_column="0"
			android:layout_gravity="left|center_vertical"
			android:text="@string/textN0"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
			android:id="@+id/textView3"
			android:layout_row="4"
			android:layout_column="0"
			android:layout_gravity="left|center_vertical"
			android:text="@string/textN1"
			android:textAppearance="?android:attr/textAppearanceSmall" />


		<EditText
			android:id="@+id/editTextN0"
			android:layout_width="125dp"
			android:layout_row="3"
			android:layout_column="1"
			android:ems="10"
			android:hint="@string/strength"
			android:inputType="number"
			android:maxLength="4"
			android:minHeight="48dp"
			tools:ignore="DuplicateSpeakableTextCheck"
			android:importantForAutofill="no" />

		<EditText
			android:id="@+id/editTextN1"
			android:layout_width="125dp"
			android:layout_row="4"
			android:layout_column="1"
			android:ems="10"
			android:hint="@string/strength"
			android:inputType="number"
			android:maxLength="4"
			android:minHeight="48dp"
			android:importantForAutofill="no" />

		<Button
			android:id="@+id/button1"
			android:layout_width="256dp"
			android:layout_height="64dp"
			android:layout_row="5"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="center"
			android:text="@string/calc" />

		<TextView
			android:id="@+id/textView4"
			android:layout_row="6"
			android:layout_column="0"
			android:layout_gravity="left|center_vertical"
			android:text="@string/textV1"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
			android:id="@+id/textView5"
			android:layout_row="7"
			android:layout_column="0"
			android:layout_gravity="left|center_vertical"
			android:text="@string/textV"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<TextView
			android:id="@+id/textViewV1"
			android:layout_row="6"
			android:layout_column="1"
			android:layout_gravity="fill_horizontal|center"
			android:gravity="center"
			android:text="@string/text_"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textColor="@color/green" />

		<TextView
			android:id="@+id/textViewV"
			android:layout_row="7"
			android:layout_column="1"
			android:layout_gravity="fill_horizontal|center"
			android:gravity="center"
			android:text="@string/text_"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<SeekBar
			android:id="@+id/seekBarV0"
			android:layout_width="match_parent"
			android:layout_row="8"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="center_vertical"
			android:alpha="0.5"
			android:max="10000"
			android:progress="1000" />

		<EditText
			android:id="@+id/editTextV1"
			android:layout_width="80dp"
			android:layout_row="7"
			android:layout_column="0"
			android:layout_gravity="right|fill_vertical"
			android:alpha="0.7"
			android:ems="10"
			android:gravity="center_horizontal|center_vertical"
			android:hint="@string/required"
			android:importantForAutofill="no"
			android:inputType="number"
			android:maxLength="6"
			android:minHeight="48dp"
			android:textAlignment="gravity"
			android:textColorHint="#9E9E9E" />

	</GridLayout>
